syntax = "proto3";

package home.app.grpc;

option java_multiple_files = true;

message TransactionMessage {
  int64 id = 1;
  string name = 2;
  enum TransactionType {
    UNKNOWN = 0;
    INCOME = 1;
    EXPENDITURE = 2;
  }
  TransactionType transaction_type = 3;
  double amount = 4;
  int64 date = 5;
  int64 number_of_times = 6;
  Period period = 7;
}

enum Period {
  UNKNOWN = 0;
  WEEK = 1;
  MONTH = 2;
  YEAR = 3;
}